Closed
Bug 1604002
Opened 6 years ago
Closed 6 years ago
Need a new way to test the status of the content processes with the fork server
Categories
(Core :: IPC, defect)
Core
IPC
Tracking
()
RESOLVED
FIXED
mozilla73
| Tracking | Status | |
|---|---|---|
| firefox73 | --- | fixed |
People
(Reporter: sinker, Assigned: sinker)
Details
Attachments
(1 file)
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:72.0) Gecko/20100101 Firefox/72.0
Steps to reproduce:
With the fork server, content processes are not the children of the parent process anymore. So, |waitpid()| does not work at the parent process. We need a new way that the parent process can test if a content process is still alive or already dead.
| Assignee | ||
Comment 1•6 years ago
|
||
Updated•6 years ago
|
Assignee: nobody → thinker.li
Updated•6 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
Updated•6 years ago
|
Status: NEW → ASSIGNED
Updated•6 years ago
|
Attachment #9115985 -
Attachment description: Bug 1604002 - Adapt the way of testing process status with the fork server. → Bug 1604002 - Adapt the way of testing process status with the fork server. r=gsvelto
Pushed by nerli@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/774bca22fd47
Adapt the way of testing process status with the fork server. r=gsvelto
Comment 3•6 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
status-firefox73:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla73
You need to log in
before you can comment on or make changes to this bug.
Description
•