Bug 1604002 - Adapt the way of testing process status with the fork server. r=gsvelto

Differential Revision: https://phabricator.services.mozilla.com/D57217